# parcelle-watch

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: streamlit_app.py
src/: __init__.py
src/indices/: vegetation.py
src/ingestion/: meteo.py  sentinel2.py
src/models/: anomaly_detection.py  yield_prediction.py
